fix: fix security page spacing - fix menu flicker

--- a/app/styles/dashboard.apps.$appId.notifications.css
+++ b/app/styles/dashboard.apps.$appId.notifications.css
@@ -17,3 +17,8 @@
   background-color: #c5ec4b;
   color: #000000;
 }
+@media screen and (max-width: 640px) {
+  .pokt-network-app-notifications form {
+    margin-bottom: 32px;
+  }
+}
